Import Sage LaTeX macros when the output is a LaTeX rendered text.

BUG: 312738
FIXED-IN: 16.08